removed some redundant components + updated the 404 page + trying to make sure hover color doesn't appear for active class on mobile

--- a/src/components/page-links.module.css
+++ b/src/components/page-links.module.css
@@ -9,8 +9,10 @@
   text-decoration: none;
 }
 
-.navigationItem a:hover {
-  color: var(--primary);
+@media (hover: hover) and (pointer: fine) {
+  .navigationItem a:hover {
+    color: var(--primary);
+  }
 }
 
 @media (max-width: 1024px) {
